# CarRL

./: .gitignore  README.md  generate_linkedin_assets.py  pyproject.toml  requirements.txt
configs/: baseline.yaml  ppo.yaml
src/carRL/: cli.py
src/carRL/envs/: __init__.py  carracing_wrappers.py
src/carRL/scripts/: eval.py  record_video.py  train.py
tests/: test_wrappers.py
