[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carRL"
version = "1.0.0"
description = "Reinforcement learning pipeline for self-driving in Gymnasium CarRacing-v3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[box2d]>=0.29.1",
    "stable-baselines3[extra]>=2.2.1",
    "numpy",
    "matplotlib",
    "pyyaml",
    "moviepy>=1.0.3",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "black"]

[project.scripts]
carrl = "carRL.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
